# nu_plugin_explore

./: Cargo.toml  Makefile  README.md  build.nu  nupm.nuon  package.nuon
.github/scripts/: add-nu-dependencies.sh
.github/workflows/: main.yml
.github/workflows/scripts/: check-cargo-lock.sh
examples/: config.nuon
examples/config/: default.nuon
examples/configuration/: config.nuon  keybindings.nuon
examples/configuration/themes/: dark.nuon
scripts/: deps.nu  setup-dev-deps  setup-dev-deps.nu
src/: app.rs  config.rs  edit.rs  event.rs  handler.rs  lib.rs  main.rs  navigation.rs  terminal.rs  tui.rs  ui.rs
src/config/: mod.rs  parsing.rs
src/explore/: app.rs  lib.rs  navigation.rs  tui.rs
src/nu/: cell_path.rs  mod.rs  strings.rs  value.rs
src/tui/: event.rs  mod.rs
