[[bin]]
bench = false
name = "nu_plugin_explore"

[dependencies]
anyhow = "1.0.73"
crossterm = "0.27.0"
nuon = "0.94.0"
nu-plugin = "0.94.0"
nu-protocol = "0.94.0"
ratatui = "0.26.1"
url = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.27.0", features = ["use-dev-tty"] }

[lib]
bench = false

[package]
edition = "2021"
name = "nu_plugin_explore"
version = "0.94.0"
